crates/qtbridge-gen/src/qt_gen_impl/tests/snapshots/qtbridge_gen__qt_gen_impl__tests__qobject_iface_tests__no_drop.snap
---
source: crates/qtbridge-gen/src/qt_gen_impl/tests/qobject_iface_tests.rs
expression: formatted
---
mod some_module {
    #[derive(Default)]
    struct SomeStruct {}
    impl SomeStruct {}
    impl qtbridge::qtbridge_runtime::DispatchMetaCall for SomeStruct {
        fn invoke_slot(&self, slot_id: u32, inputs: &[*const u8], outputs: &[*mut u8]) {
            use qtbridge::qtbridge_runtime::QMetaCallArg;
            match slot_id {
                _ => panic!("Unhandled slot id {slot_id}"),
            }
        }
        fn invoke_slot_mut(&mut self, slot_id: u32, inputs: &[*const u8], outputs: &[*mut u8]) {
            use qtbridge::qtbridge_runtime::QMetaCallArg;
            match slot_id {
                _ => panic!("Unhandled slot id {slot_id}"),
            }
        }
        fn read_property(&self, prop_id: u32) -> qtbridge::qtbridge_type_lib::QVariant {
            #[allow(unused_imports)]
            use qtbridge::qtbridge_runtime::QPropertyMember;
            match prop_id {
                _ => panic!("Unhandled property id {prop_id}"),
            }
        }
        fn write_property(&mut self, prop_id: u32, value: &qtbridge::qtbridge_type_lib::QVariant) {
            #[allow(unused_imports)]
            use qtbridge::qtbridge_runtime::QPropertyMember;
            match prop_id {
                _ => panic!("Unhandled property id {prop_id}"),
            }
        }
    }
    impl qtbridge::qtbridge_runtime::QMetaInfo for SomeStruct {
        type CppProxy =
            qtbridge::qtbridge_interfaces::qabstract_list_model::QAbstractListModelProxyCpp;
        fn build_dynamic_meta_type(
            mut meta_obj: std::pin::Pin<&mut qtbridge::qtbridge_runtime::DynamicMetaObjectBuilder>,
        ) {
            use qtbridge::qtbridge_runtime::{QMetaCallArg, QMetaTypeGet, QPropertyMember};
            use qtbridge::qtbridge_type_lib;
            use qtbridge_type_lib::QMetaType;
            meta_obj.as_mut().end_meta_registration();
        }
        fn get_shared_dynamic_meta_object_data(
        ) -> &'static qtbridge::qtbridge_runtime::DynamicMetaObjectData {
            use std::sync::OnceLock;
            thread_local! { static DYNAMIC_META_OBJECT : OnceLock < & 'static qtbridge :: qtbridge_runtime :: DynamicMetaObjectData > = OnceLock :: new () ; }
            DYNAMIC_META_OBJECT.with(|cell| {
                *cell.get_or_init(|| {
                    let ptr = Self::create_dynamic_meta_object_data_for_type();
                    unsafe { ptr.as_ref() }.unwrap()
                })
            })
        }
        fn get_qmetatype() -> qtbridge::qtbridge_type_lib::QMetaType {
            use std::sync::OnceLock;
            static META_TYPE_INTERFACE: OnceLock<qtbridge::qtbridge_type_lib::QMetaTypeInterface> =
                OnceLock::new();
            let iface = META_TYPE_INTERFACE.get_or_init(
                qtbridge::qtbridge_runtime::qmetatypeforqobject::init_interface_for::<Self>,
            );
            qtbridge::qtbridge_type_lib::QMetaType::new_with_interface(iface as *const _)
        }
    }
    impl qtbridge::qtbridge_runtime::QObjectHolder for SomeStruct {
        type ProxyRust =
            qtbridge::qtbridge_interfaces::qabstract_list_model::QAbstractListModelProxyRust;
        fn as_adaptor_trait(
            rust_obj_rc: std::rc::Rc<std::cell::RefCell<Self>>,
        ) -> std::rc::Rc<
            std::cell::RefCell<
                <Self::ProxyRust as qtbridge::qtbridge_runtime::qproxies::QRustProxy>::AdapterType,
            >,
        > {
            rust_obj_rc
        }
    }
    impl qtbridge::qtbridge_runtime::QmlRegister for SomeStruct {
        const URI: &str = "qtbridge_gen";
        const ELEMENT_NAME: &str = "SomeStruct";
        const MINOR_VERSION: u8 = 2u8;
        const MAJOR_VERSION: u8 = 0u8;
        const IS_SINGLETON: bool = false;
    }
}
